--- a/src/pages/ErrorPage/ErrorPage.scss
+++ b/src/pages/ErrorPage/ErrorPage.scss
@@ -6,24 +6,27 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+
   .error-top {
     margin: 50px;
     width: 40%;
     border-radius: 50px;
   }
+
   .error-lbls-div {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     .error404-lbl {
       font-size: 3.5rem;
       font-weight: bold;
     }
+
     .error-lbl {
       font-size: 2.5rem;
       text-align: right;
-      direction: rtl;
     }
   }
 
